# NdkDemo

./: local.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
old_apk/: CMakeLists.txt  build.gradle
old_apk/src/main/: AndroidManifest.xml
old_apk/src/main/cpp/bspatch/: bspatch.c  bspatch.h
old_apk/src/main/cpp/imagecompress/: compress.cpp  compress.h
old_apk/src/main/java/com/ndkdemo/: BsPatchApk.java  MainActivity.java  NativeCompress.java
old_apk/src/main/res/layout/: activity_main.xml
old_apk/src/test/java/com/ndkdemo/: ExampleUnitTest.java
